@@ -5,8 +5,6 @@ import com.dazzle.asklepios.repository.AllergensRepository;
 import com.dazzle.asklepios.service.AllergensService;
 import jakarta.validation.Valid;
 import java.net.URI;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import org.slf4j.Logger;
@@ -17,47 +15,43 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+/**
+ * REST controller for managing Allergen entities.
+ */
 @RestController
-@RequestMapping("/setup/api/allergen")
-public class AllergenController {
+@RequestMapping("/setup/api/allergens")
+public class AllergensController {
 
-    private static final Logger LOG = LoggerFactory.getLogger(AllergenController.class);
+    private static final Logger LOG = LoggerFactory.getLogger(AllergensController.class);
 
-    private static final List<String> ALLOWED_ORDERED_PROPERTIES = Collections.unmodifiableList(
-            Arrays.asList("id", "code", "name", "type")
-    );
+    private static final List<String> ALLOWED_ORDERED_PROPERTIES = List.of("id", "code", "name", "type");
 
     private final AllergensService allergenService;
     private final AllergensRepository allergenRepository;
 
-    public AllergenController(AllergensService allergenService, AllergensRepository allergenRepository) {
+    public AllergensController(AllergensService allergenService, AllergensRepository allergenRepository) {
         this.allergenService = allergenService;
         this.allergenRepository = allergenRepository;
     }
 
     /**
      * {@code POST /api/allergen} : Create a new Allergen.
-     *
-     * Creates a new allergen entity from the provided request body.
-     *
-     * @param allergen the allergen data to create.
-     * @return the {@link ResponseEntity} with status {@code 201 (Created)} and with body the created allergen,
-     * or with status {@code 409 (Conflict)} if an allergen with the same code or name already exists.
      */
     @PostMapping
-    public ResponseEntity<Allergens> create(@RequestBody Allergens allergen) {
+    public ResponseEntity<Allergens> createAllergen(@Valid @RequestBody Allergens allergen) {
         LOG.debug("REST request to save Allergen : {}", allergen);
-        return ResponseEntity.ok(allergenService.create(allergen));
+        if ((allergen.getCode() != null && allergenRepository.existsByCodeIgnoreCase(allergen.getCode()))
+                || (allergen.getName() != null && allergenRepository.existsByNameIgnoreCase(allergen.getName()))) {
+            return ResponseEntity.status(HttpStatus.CONFLICT).build();
+        }
+        Allergens result = allergenService.create(allergen);
+        return ResponseEntity
+                .created(URI.create("/setup/api/allergens/" + result.getId()))
+                .body(result);
     }
-
 
     /**
      * {@code PUT /api/allergen/{id}} : Update an existing Allergen.
-     *
-     * @param id the id of the allergen to update.
-     * @param allergen the allergen data to update.
-     * @return the {@link ResponseEntity} with status {@code 200 (OK)} and with body the updated allergen,
-     * or with status {@code 404 (Not Found)} if the allergen does not exist.
      */
     @PutMapping("/{id}")
     public ResponseEntity<Allergens> updateAllergen(@PathVariable("id") Long id, @Valid @RequestBody Allergens allergen) {
@@ -67,31 +61,18 @@ public class AllergenController {
     }
 
     /**
-     * {@code GET /api/allergen} : Get all Allergens (cached/paged).
-     *
-     * Returns the full list of allergens. Supports sorting by allowed properties only.
-     *
-     * @param pageable the paging and sorting information.
-     * @return the {@link ResponseEntity} with status {@code 200 (OK)} and the list of all allergens.
+     * {@code GET /api/allergen} : Get all Allergens (cached).
      */
     @GetMapping
-    public ResponseEntity<List<Allergens>> getAllAllergens(Pageable pageable) {
-        LOG.debug("REST request to get all Allergens (paged)");
-
-        if (!onlyContainsAllowedProperties(pageable)) {
-            return ResponseEntity.badRequest().build();
-        }
-
+    public ResponseEntity<List<Allergens>> getAllAllergens() {
+        LOG.debug("REST request to get all Allergens (cached)");
         List<Allergens> allergens = allergenService.findAll();
         return ResponseEntity.ok(allergens);
     }
 
+
     /**
-     * {@code GET /api/allergen/{id}} : Get the allergen by id.
-     *
-     * @param id the id of the allergen to retrieve.
-     * @return the {@link ResponseEntity} with status {@code 200 (OK)} and with body the allergen,
-     * or with status {@code 404 (Not Found)} if it does not exist.
+     * {@code GET /api/allergen/{id}} : Get an Allergen by id.
      */
     @GetMapping("/{id}")
     public ResponseEntity<Allergens> getAllergen(@PathVariable("id") Long id) {
@@ -100,10 +81,7 @@ public class AllergenController {
     }
 
     /**
-     * {@code DELETE /api/allergen/{id}} : Delete the allergen by id.
-     *
-     * @param id the id of the allergen to delete.
-     * @return the {@link ResponseEntity} with status {@code 204 (NO_CONTENT)}.
+     * {@code DELETE /api/allergen/{id}} : Delete an Allergen by id.
      */
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteAllergen(@PathVariable("id") Long id) {
